ad40xx: Rename ad400x project to ad40xx
Rename the project name to ad40xx. Also add a README.md which list all
the supported devices.

Fix system_top, add all the unused SPI ports to the system_wrapper
instance, to reduce the number of warning messages after synthesis.

--- a/projects/ad40xx_fmc/zed/Makefile
+++ b/projects/ad40xx_fmc/zed/Makefile
@@ -3,9 +3,9 @@
 ## Auto-generated, do not modify!
 ####################################################################################
 
-PROJECT_NAME := ad400x_zed
+PROJECT_NAME := ad40xx_zed
 
-M_DEPS += ../common/ad400x_bd.tcl
+M_DEPS += ../common/ad40xx_bd.tcl
 M_DEPS += ../../common/zed/zed_system_constr.xdc
 M_DEPS += ../../common/zed/zed_system_bd.tcl
 M_DEPS += ../../../library/xilinx/common/ad_iobuf.v
